// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ESLint config integration > node scope: stable violations across fixtures 1`] = `
[
  {
    "file": "tests/node.js",
    "line": 1,
    "ruleId": "@typescript-eslint/no-require-imports",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 4,
    "ruleId": "n/no-deprecated-api",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 7,
    "ruleId": "@typescript-eslint/no-unused-vars",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 7,
    "ruleId": "func-names",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 10,
    "ruleId": "no-useless-escape",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 10,
    "ruleId": "no-useless-escape",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 10,
    "ruleId": "security/detect-unsafe-regex",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 21,
    "ruleId": "n/no-process-exit",
    "severity": 2,
  },
  {
    "file": "tests/plainJavaScript.js",
    "line": 3,
    "ruleId": "no-console",
    "severity": 2,
  },
  {
    "file": "tests/testComponent.tsx",
    "line": 2,
    "ruleId": "jsdoc/require-jsdoc",
    "severity": 2,
  },
  {
    "file": "tests/testComponent.tsx",
    "line": 4,
    "ruleId": "unicorn/prefer-global-this",
    "severity": 2,
  },
  {
    "file": "tests/testComponent.tsx",
    "line": 7,
    "ruleId": "no-console",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 1,
    "ruleId": "@stylistic/no-multiple-empty-lines",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 4,
    "ruleId": "sonarjs/updated-const-var",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 6,
    "ruleId": "no-console",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 9,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 9,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 9,
    "ruleId": "no-var",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "@stylistic/function-call-argument-newline",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "@stylistic/indent",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "no-console",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 13,
    "ruleId": "@stylistic/array-bracket-spacing",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 13,
    "ruleId": "@stylistic/array-bracket-spacing",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 13,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 13,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 16,
    "ruleId": "no-warning-comments",
    "severity": 1,
  },
  {
    "file": "tests/testFile.ts",
    "line": 17,
    "ruleId": "@stylistic/array-bracket-spacing",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 17,
    "ruleId": "@stylistic/array-bracket-spacing",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 19,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 19,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/types.ts",
    "line": 1,
    "ruleId": "@typescript-eslint/no-unused-vars",
    "severity": 2,
  },
  {
    "file": "tests/types.ts",
    "line": 4,
    "ruleId": "@stylistic/indent",
    "severity": 2,
  },
  {
    "file": "tests/types.ts",
    "line": 13,
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`ESLint config integration > react scope: stable violations across fixtures 1`] = `
[
  {
    "file": "tests/node.js",
    "line": 1,
    "ruleId": "@typescript-eslint/no-require-imports",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 7,
    "ruleId": "@typescript-eslint/no-unused-vars",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 7,
    "ruleId": "func-names",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 10,
    "ruleId": "no-useless-escape",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 10,
    "ruleId": "no-useless-escape",
    "severity": 2,
  },
  {
    "file": "tests/plainJavaScript.js",
    "line": 3,
    "ruleId": "no-console",
    "severity": 2,
  },
  {
    "file": "tests/testComponent.tsx",
    "line": 2,
    "ruleId": "jsdoc/require-jsdoc",
    "severity": 2,
  },
  {
    "file": "tests/testComponent.tsx",
    "line": 4,
    "ruleId": "unicorn/prefer-global-this",
    "severity": 2,
  },
  {
    "file": "tests/testComponent.tsx",
    "line": 5,
    "ruleId": "react-hooks/rules-of-hooks",
    "severity": 2,
  },
  {
    "file": "tests/testComponent.tsx",
    "line": 7,
    "ruleId": "no-console",
    "severity": 2,
  },
  {
    "file": "tests/testComponent.tsx",
    "line": 13,
    "ruleId": "react/jsx-no-literals",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 1,
    "ruleId": "@stylistic/no-multiple-empty-lines",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 4,
    "ruleId": "sonarjs/updated-const-var",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 6,
    "ruleId": "no-console",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 9,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 9,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 9,
    "ruleId": "no-var",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "@stylistic/function-call-argument-newline",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "@stylistic/indent",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "no-console",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 13,
    "ruleId": "@stylistic/array-bracket-spacing",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 13,
    "ruleId": "@stylistic/array-bracket-spacing",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 13,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 13,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 16,
    "ruleId": "no-warning-comments",
    "severity": 1,
  },
  {
    "file": "tests/testFile.ts",
    "line": 17,
    "ruleId": "@stylistic/array-bracket-spacing",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 17,
    "ruleId": "@stylistic/array-bracket-spacing",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 19,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 19,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/types.ts",
    "line": 1,
    "ruleId": "@typescript-eslint/no-unused-vars",
    "severity": 2,
  },
  {
    "file": "tests/types.ts",
    "line": 4,
    "ruleId": "@stylistic/indent",
    "severity": 2,
  },
  {
    "file": "tests/types.ts",
    "line": 13,
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`ESLint config integration > recommended scope: stable violations across fixtures 1`] = `
[
  {
    "file": "tests/node.js",
    "line": 1,
    "ruleId": "@typescript-eslint/no-require-imports",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 7,
    "ruleId": "@typescript-eslint/no-unused-vars",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 7,
    "ruleId": "func-names",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 10,
    "ruleId": "no-useless-escape",
    "severity": 2,
  },
  {
    "file": "tests/node.js",
    "line": 10,
    "ruleId": "no-useless-escape",
    "severity": 2,
  },
  {
    "file": "tests/plainJavaScript.js",
    "line": 3,
    "ruleId": "no-console",
    "severity": 2,
  },
  {
    "file": "tests/testComponent.tsx",
    "line": 2,
    "ruleId": "jsdoc/require-jsdoc",
    "severity": 2,
  },
  {
    "file": "tests/testComponent.tsx",
    "line": 4,
    "ruleId": "unicorn/prefer-global-this",
    "severity": 2,
  },
  {
    "file": "tests/testComponent.tsx",
    "line": 7,
    "ruleId": "no-console",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 1,
    "ruleId": "@stylistic/no-multiple-empty-lines",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 4,
    "ruleId": "sonarjs/updated-const-var",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 6,
    "ruleId": "no-console",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 9,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 9,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 9,
    "ruleId": "no-var",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "@stylistic/function-call-argument-newline",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "@stylistic/indent",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 10,
    "ruleId": "no-console",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 13,
    "ruleId": "@stylistic/array-bracket-spacing",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 13,
    "ruleId": "@stylistic/array-bracket-spacing",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 13,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 13,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 16,
    "ruleId": "no-warning-comments",
    "severity": 1,
  },
  {
    "file": "tests/testFile.ts",
    "line": 17,
    "ruleId": "@stylistic/array-bracket-spacing",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 17,
    "ruleId": "@stylistic/array-bracket-spacing",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 19,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/testFile.ts",
    "line": 19,
    "ruleId": "@stylistic/space-in-parens",
    "severity": 2,
  },
  {
    "file": "tests/types.ts",
    "line": 1,
    "ruleId": "@typescript-eslint/no-unused-vars",
    "severity": 2,
  },
  {
    "file": "tests/types.ts",
    "line": 4,
    "ruleId": "@stylistic/indent",
    "severity": 2,
  },
  {
    "file": "tests/types.ts",
    "line": 13,
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;
